--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,7 @@
 extends layout
-
 block content
-  h1= title
-  p Welcome to #{title}
+  nav(class='navbar')
+    ul
+      li 
+        a(href="/catalog/movies") Movie List
+        a(href="/catalog/create") Add Movie
