working on front end

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,5 @@
 extends layout
+
 block content
-  nav(class='navbar')
-    ul
-      li 
-        a(href="/catalog/movies") Movie List
-        a(href="/catalog/create") Add Movie
+
+  h1 All Movies
