--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,31 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #59565B;
+}
+
+.brand {
+  padding: 8px;
+  position: absolute;
 }
 
 a {
-  color: #00B7FF;
+  text-decoration: none;
+  color: #FFCF92;
+  padding: 10px;
+}
+
+.navbar ul {
+  display: flex;
+  float: right;
+  list-style-type: none;
+  margin-right:10px;
+}
+
+.navbar ul li {
+  padding: 10px 0 0 0;
 }
