--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav(class='navbar')
+      a(class='brand') Movie Generator
+      ul
+        li
+          a(href="/catalog/movies") Movie List
+          a(href="/catalog/create") Add Movie
     block content
