--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,7 +5,7 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     nav(class='navbar')
-      a(class='brand') Movie Generator
+      a(class='brand')(href="/") Movie Generator
       ul
         li
           a(href="/catalog/movies") Movie List
