--- a/views/movies_list.pug
+++ b/views/movies_list.pug
@@ -1,12 +1,9 @@
-//- extends layout
-//- block content
-//-     h1(style="text-align:center") Not Yet Implemented
 extends layout
 
 block content
     h1= title
 
-    ul
+    ul(class='mlist')
         each movie in movie_list
             li
                 a(href=movie.url) #{movie.title}
