--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,9 +3,10 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(href='/javascript/scripts.js')
   body
     nav(class='navbar')
-      a(class='brand')(href="/") Movie Generator
+      a(class='brand', href="/") Movie Generator
       ul
         li
           a(href="/catalog/movies") Movie List
