added "add movie form" and todos

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,5 +10,5 @@ html
       ul
         li
           a(href="/catalog/movies") Movie List
-          a(href="/catalog/create") Add Movie
+          a(href="/catalog/movie/create") Add Movie
     block content
