--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,7 +59,7 @@ a {
   padding:5px;
 }
 
-form{
+.mform{
   position: absolute;
   left:50%;
   transform: translateX(-90%);
@@ -75,7 +75,7 @@ input {
   border-radius: 4px;
 }
 
-button {
+.btn {
   position: absolute;
   left: 50%;
   transform: translateX(-42.5%);
@@ -87,4 +87,21 @@ button {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.btn-random {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 20%;
+  height: 20%;
+  background-color: #FFCF92;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size:x-large;
 }
