--- a/views/movie_form.pug
+++ b/views/movie_form.pug
@@ -3,9 +3,9 @@ extends layout
 block content
   h1 #{title}
 
-  form(method='POST' action='')
+  form.mform(method='POST' action='')
     div.form-group
-      input#name.form-control(type='text', placeholder='Enter Movie Title' name='name' value=(undefined===genre ? '' : genre.name))
+      input#name.form-control(type='text', placeholder='Enter Movie Title' name='name' value=(undefined===movie ? '' : movie.name))
     button.btn.btn-primary(type='submit') Submit
 
   if errors
